--- a/README.org
+++ b/README.org
@@ -8,245 +8,20 @@
 
 --------------------------------------------------------------------------------
 
-@misc{wierichs2021general,
-      title={General parameter-shift rules for quantum gradients}, 
-      author={David Wierichs and Josh Izaac and Cody Wang and Cedric Yen-Yu Lin},
-      year={2021},
-      eprint={2107.12390},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
-}
+[1] T. Bennett, E. Matwiejew, S. Marsh, and J. B. Wang. Quantum walk-based vehicle routing optimisation, 2021, 2109.14907.
 
+[2] N. Slate, E. Matwiejew, S. Marsh, and J. B. Wang. Quantum walk-based portfolio optimisation. Quantum, 5:513, Jul 2021.
 
+[3] S. Marsh and J. B. Wang. Combinatorial optimization via highly efficient quantum walks. Physical Review Research, 2(2), Jun 2020.
 
-@article{mari2021gradients,
-   title={Estimating the gradient and higher-order derivatives on quantum hardware},
-   volume={103},
-   ISSN={2469-9934},
-   url={http://dx.doi.org/10.1103/PhysRevA.103.012405},
-   DOI={10.1103/physreva.103.012405},
-   number={1},
-   journal={Physical Review A},
-   publisher={American Physical Society (APS)},
-   author={Mari, Andrea and Bromley, Thomas R. and Killoran, Nathan},
-   year={2021},
-   month={Jan}
-}
+[4] Jorge Nocedal, Stephen J. Wright. Numerical Optimization. Springer Science, 233 Spring Street, New York, NY, USA, 2006.
 
+[5] B. Koczor and S. C. Benjamin. Quantum analytic descent, 2021, 2008.13774.
 
+[6] A. Mari, T. R. Bromley, and N. Killoran. Estimating the gradient and higher-order derivatives on quantum hardware. Physical Review A, 103(1), Jan 2021.
 
-@misc{farhi2014quantum,
-      title={A Quantum Approximate Optimization Algorithm}, 
-      author={Edward Farhi and Jeffrey Goldstone and Sam Gutmann},
-      year={2014},
-      eprint={1411.4028},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
-}
+[7] D. Wierichs, J. Izaac, C. Wang, and C. Y.-Y. Lin. General parameter-shift rules for quantum gradients, 2021, 2107.12390.
 
+[8] E. Matwiejew and J. B. Wang. Quopmpi: a framework for parallel simulation of quantum variational algorithms, 2021, 2110.03963.
 
-
-@article{Marsh_2020,
-   title={Combinatorial optimization via highly efficient quantum walks},
-   volume={2},
-   ISSN={2643-1564},
-   url={http://dx.doi.org/10.1103/PhysRevResearch.2.023302},
-   DOI={10.1103/physrevresearch.2.023302},
-   number={2},
-   journal={Physical Review Research},
-   publisher={American Physical Society (APS)},
-   author={Marsh, S. and Wang, J. B.},
-   year={2020},
-   month={Jun}
-}
-
-
-@misc{koczor2021quantum,
-      title={Quantum Analytic Descent}, 
-      author={Bálint Koczor and Simon C. Benjamin},
-      year={2021},
-      eprint={2008.13774},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
-}
-
-
-
-@misc{jones2020efficient,
-      title={Efficient calculation of gradients in classical simulations of variational quantum algorithms}, 
-      author={Tyson Jones and Julien Gacon},
-      year={2020},
-      eprint={2009.02823},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
-}
-
-
-
-@misc{crooks2018performance,
-      title={Performance of the Quantum Approximate Optimization Algorithm on the Maximum Cut Problem}, 
-      author={Gavin E. Crooks},
-      year={2018},
-      eprint={1811.08419},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
-}
-
-
-
-
-@misc{crooks2019gradients,
-      title={Gradients of parameterized quantum gates using the parameter-shift rule and gate decomposition}, 
-      author={Gavin E. Crooks},
-      year={2019},
-      eprint={1905.13311},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
-}
-
-
-
-@article{Tamayo_Mendoza_2018,
-   title={Automatic Differentiation in Quantum Chemistry with Applications to Fully Variational Hartree–Fock},
-   volume={4},
-   ISSN={2374-7951},
-   url={http://dx.doi.org/10.1021/acscentsci.7b00586},
-   DOI={10.1021/acscentsci.7b00586},
-   number={5},
-   journal={ACS Central Science},
-   publisher={American Chemical Society (ACS)},
-   author={Tamayo-Mendoza, Teresa and Kreisbeck, Christoph and Lindh, Roland and Aspuru-Guzik, Alán},
-   year={2018},
-   month={May},
-   pages={559–566}
-}
-
-
-
-
-
-@misc{bennett2021quantum,
-      title={Quantum walk-based vehicle routing optimisation}, 
-      author={Tavis Bennett and Edric Matwiejew and Sam Marsh and Jingbo B. Wang},
-      year={2021},
-      eprint={2109.14907},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
-}
-
-
-
-@article{stokes2020natural,
-   title={Quantum Natural Gradient},
-   volume={4},
-   ISSN={2521-327X},
-   url={http://dx.doi.org/10.22331/q-2020-05-25-269},
-   DOI={10.22331/q-2020-05-25-269},
-   journal={Quantum},
-   publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
-   author={Stokes, James and Izaac, Josh and Killoran, Nathan and Carleo, Giuseppe},
-   year={2020},
-   month={May},
-   pages={269}
-}
-
-
-
-
-@article{wierichs2020local,
-   title={Avoiding local minima in variational quantum eigensolvers with the natural gradient optimizer},
-   volume={2},
-   ISSN={2643-1564},
-   url={http://dx.doi.org/10.1103/PhysRevResearch.2.043246},
-   DOI={10.1103/physrevresearch.2.043246},
-   number={4},
-   journal={Physical Review Research},
-   publisher={American Physical Society (APS)},
-   author={Wierichs, David and Gogolin, Christian and Kastoryano, Michael},
-   year={2020},
-   month={Nov}
-}
-
-
-
-
-@article{slate2021portfolio,
-   title={Quantum walk-based portfolio optimisation},
-   volume={5},
-   ISSN={2521-327X},
-   url={http://dx.doi.org/10.22331/q-2021-07-28-513},
-   DOI={10.22331/q-2021-07-28-513},
-   journal={Quantum},
-   publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
-   author={Slate, N. and Matwiejew, E. and Marsh, S. and Wang, J. B.},
-   year={2021},
-   month={Jul},
-   pages={513}
-}
-
-
-
-@misc{matwiejew2021quopmpi,
-    title={QuOpMPI: a framework for parallel simulation of quantum variational algorithms},
-    author={Edric Matwiejew and Jingbo B. Wang},
-    year={2021},
-    eprint={2110.03963},
-    archivePrefix={arXiv},
-    primaryClass={quant-ph}
-}
-
-
-
-
-@misc{Scipy,
-  title = {Scipy},
-  howpublished = {\url{https://www.scipy.org/}},
-  note = {Accessed: 2021-10-22}
-}
-
-
-@misc{TensorFlow,
-  title = {{TensorFlow}},
-  howpublished = {\url{https://www.tensorflow.org/}},
-  note = {Accessed: 2021-10-22}
-}
-
-
-@misc{SciKit-learn,
-  title = {{SciKit-learn}},
-  howpublished = {\url{https://scikit-learn.org/stable/index.html}},
-  note = {Accessed: 2021-10-22}
-}
-
-
-@misc{QuOpMPI,
-  title = {{QuOp\_MPI}},
-  howpublished = {\url{https://github.com/Edric-Matwiejew/QuOp_MPI}},
-  note = {Accessed: 2021-10-22}
-}
-
-
-
-@book{NumericalOptimization,
-  title     = {{Numerical Optimization}},
-  author    = {{Jorge Nocedal, Stephen J. Wright}},
-  year      = 2006,
-  publisher = {{Springer Science}},
-  address   = {{233 Spring Street, New York, NY, USA}}
-}
-
-
-@misc{schrodingersCat,
-  author = "{Wikipedia contributors}",
-  title = "Schrödinger's cat --- {Wikipedia}{,} The Free Encyclopedia",
-  year = "2021",
-  url = "https://en.wikipedia.org/w/index.php?title=Schr%C3%B6dinger%27s_cat&oldid=1050519919",
-  note = "[Online; accessed 23-October-2021]"
-}
-
-
-@misc{MPI,
-  title = {{MPI}},
-  howpublished = {\url{https://www.mpi-forum.org/}},
-  note = {Accessed: 2021-10-23}
-} 
+[9] QuOp MPI. https://github.com/Edric-Matwiejew/QuOp_MPI.
